# ROSV_Control

./: .gitignore  Makefile  Makefile.in  README.md  ToDo  autogen.sh  build_automake  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Block_Rev0.uxf  Software_Structure_Rev0.uxf  Submarine_Class.uxf
scripts/: Instal_ROSV_Control  ROSV_Control_Init  Uninstall_ROSV_Control
src/: Alarm.cpp  Alarm.h  AlarmManager.cpp  AlarmManager.h  CameraManager.cpp  CameraManager.h  ClientSocket.cpp  ClientSocket.h  CmdModule.h  CmdProc.cpp  CmdProc.h  CmdStream.cpp  CmdStream.h  ControlProtocol.cpp  ControlProtocol.h  DataLogger.cpp  DataLogger.h  DataSource.cpp  DataSource.h  DepthManager.cpp  DepthManager.h  DiveMonitor.cpp  DiveMonitor.h  EventMessages.cpp  EventMessages.h  LightManager.cpp  LightManager.h  Logger.cpp  Logger.h  Makefile  Makefile.am  Makefile.in  Motor.cpp  Motor.h  MsgQueue.cpp  MsgQueue.h  Navigation.cpp  Navigation.h  PWM_Con.cpp  PWM_Con.h  (+47 more)
src/.deps/: CmdProc.Po  CmdStream.Po  PropulsionControl.Po  SysReport.Po  TcpServer.Po  main.Po  motor.Po  parson.Po
test/: pos  position  test
